--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -420,6 +420,7 @@
       </svg>
 
       <span>Learn Angular</span>
+      <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
 
       <svg
         class="material-icons"
