--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,13 @@
   <button mat-menu-item>Item 1</button>
   <button mat-menu-item>Item 2</button>
 </mat-menu>
+
+<small>{{ total }}</small>
+<img
+  src="https://quickchart.io/chart?c={type:'pie',data:{labels:['Negative','Positive', 'Em espera'], datasets:[{data:[{{
+    neg
+  }},{{ pos }},{{ def }}]}]}}"
+/>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
