--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -21,6 +21,9 @@
           <li>
             <a href="#">Login</a>
           </li>
+          <li>
+            <a href="#">Register</a>
+          </li>
         </ul>
       </nav>
     </div>
