--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,6 @@
 <app-header></app-header>
 
-<h1>List Request Example</h1>
-<div *ngFor="let item of list">
-  <app-request [item]="item"></app-request>
-</div>
+<app-list-request></app-list-request>
 
 <app-dashboard></app-dashboard>
 
