feat: change header

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,9 +1,6 @@
 <header>
   <div class="container">
-    <img
-      src="https://img.icons8.com/ios/50/000000/coronavirus.png"
-      alt="Logo"
-    />
+    <img src="../../assets/logo.png" alt="Logo" />
     <div class="menu-section">
       <div class="menu-toggle">
         <div class="one"></div>
