reafactor: test material to component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,6 +6,8 @@
 
 <app-table-request></app-table-request>
 
+<app-test-material></app-test-material>
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
@@ -13,13 +15,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<h1>Test Material UI</h1>
-<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
-
-<button mat-button [matMenuTriggerFor]="menu">Menu</button>
-<mat-menu #menu="matMenu">
-  <button mat-menu-item>Item 1</button>
-  <button mat-menu-item>Item 2</button>
-</mat-menu>
 
 <router-outlet></router-outlet>
