feat: added nav with component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,5 @@
 <app-header></app-header>
 
-<app-list-request></app-list-request>
-
-<app-dashboard></app-dashboard>
-
-<app-table-request></app-table-request>
-
-<app-test-material></app-test-material>
-
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
@@ -15,5 +7,10 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<nav>
+  <a href="/list/">List</a>
+  <a href="/table/">Table</a>
+  <a href="/dashboard/">Dashboard</a>
+  <a href="/material/">Material</a>
+</nav>
 <router-outlet></router-outlet>
