feat: added jwt in frontend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,16 +1,9 @@
 <app-header></app-header>
 
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <nav>
-  <a href="/list/">List</a>
-  <a href="/table/">Table</a>
-  <a href="/dashboard/">Dashboard</a>
-  <a href="/material/">Material</a>
+  <a routerLink="/list/">List</a>
+  <a routerLink="/table/">Table</a>
+  <a routerLink="/dashboard/">Dashboard</a>
+  <a routerLink="/material/">Material</a>
 </nav>
 <router-outlet></router-outlet>
