--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,8 +1,12 @@
+body {
+  background-color: #f0f0f5;
+}
+
 nav {
   height: 60px;
   line-height: 60px;
   width: 100%;
-  background-color: #3498db;
+  background-color: #2d82bb;
 }
 
 a {
