--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -16,7 +16,7 @@
             <a href="#">Perguntas Frequentes</a>
           </li>
           <li>
-            <a href="#">Login</a>
+            <a routerLink="/login/">Login</a>
           </li>
           <li>
             <a href="#">Register</a>
