feat: added kpi component for dashboard

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -4,3 +4,9 @@
     pos
   }},{{ neg }},{{ def }}]}]}}"
 />
+<app-kpi
+  icon="https://img.icons8.com/cotton/64/000000/business-group.png"
+  text="Users"
+  resolte="125"
+  alt="Users"
+></app-kpi>
