--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -19,6 +19,9 @@
             <a routerLink="/login/">Login</a>
           </li>
           <li>
+            <a (click)="logout()" routerLink="/login/">Logout</a>
+          </li>
+          <li>
             <a href="#">Register</a>
           </li>
         </ul>
