feat: added page register

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -22,7 +22,7 @@
             <a (click)="logout()" routerLink="/login/">Logout</a>
           </li>
           <li>
-            <a href="#">Register</a>
+            <a routerLink="/register/">Register</a>
           </li>
         </ul>
       </nav>
