feat: added home page

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,7 @@
-<app-header></app-header>
-
 <nav>
   <a routerLink="/list/">List</a>
   <a routerLink="/table/">Table</a>
   <a routerLink="/dashboard/">Dashboard</a>
-  <a routerLink="/material/">Material</a>
+  <a routerLink="/home/">Material</a>
 </nav>
 <router-outlet></router-outlet>
