--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
       <nav>
         <ul>
           <li>
-            <a href="#">Home</a>
+            <a routerLink="/home/">Home</a>
           </li>
           <li>
             <a href="#">Perguntas Frequentes</a>
