feat: added question page

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
             <a routerLink="/home/">Home</a>
           </li>
           <li>
-            <a href="#">Perguntas Frequentes</a>
+            <a routerLink="/question/">Perguntas Frequentes</a>
           </li>
           <li>
             <a routerLink="/login/">Login</a>
