--- a/frontend/src/app/pages/register-page/register-page.component.html
+++ b/frontend/src/app/pages/register-page/register-page.component.html
@@ -12,7 +12,7 @@
         Create a Users Account
       </p>
 
-      <button>I have an account</button>
+      <button (click)="loginPage()">I have an account</button>
     </section>
 
     <form (submit)="handleRegister($event)">
