feat: logout added

--- a/frontend/src/app/components/header-employee/header-employee.component.html
+++ b/frontend/src/app/components/header-employee/header-employee.component.html
@@ -13,7 +13,7 @@
             <a routerLink="">Requests</a>
           </li>
           <li>
-            <a routerLink="login">Logout</a>
+            <a (click)="logout()" routerLink="/login/">Logout</a>
           </li>
         </ul>
       </nav>
