--- a/frontend/src/app/pages/employee-page/employee-page.component.html
+++ b/frontend/src/app/pages/employee-page/employee-page.component.html
@@ -15,15 +15,42 @@
         The actual rendered columns are set as a property on the row definition" -->
 
   <!-- Position Column -->
-  <ng-container matColumnDef="position">
+  <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>ID</th>
-    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    <td mat-cell *matCellDef="let element">
+      {{ element.id }}
+    </td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="name">
+  <ng-container matColumnDef="requestState">
     <th mat-header-cell *matHeaderCellDef>Resquest State</th>
     <td mat-cell *matCellDef="let element">{{ element.requestState }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="userState">
+    <th mat-header-cell *matHeaderCellDef>User State</th>
+    <td mat-cell *matCellDef="let element">{{ element.userState }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="userId">
+    <th mat-header-cell *matHeaderCellDef>User ID</th>
+    <td mat-cell *matCellDef="let element">{{ element.userId }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="firstTestResult">
+    <th mat-header-cell *matHeaderCellDef>First Test</th>
+    <td mat-cell *matCellDef="let element">{{ element.firstTestResult }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="secondTestResult">
+    <th mat-header-cell *matHeaderCellDef>Second Test</th>
+    <td mat-cell *matCellDef="let element">{{ element.secondTestResult }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="employeeId">
+    <th mat-header-cell *matHeaderCellDef>Responsible</th>
+    <td mat-cell *matCellDef="let element">{{ element.employeeId }}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
