feat: update request page added

--- a/frontend/src/app/pages/request-page/request-page.component.html
+++ b/frontend/src/app/pages/request-page/request-page.component.html
@@ -14,6 +14,6 @@
     <p>Request State: {{ request.requestState }}</p>
     <p>User State: {{ request.userState }}</p>
 
-    <button>Update</button>
+    <button routerLink="/employee/request/update">Update</button>
   </div>
 </div>
