feat: added information in update request page

--- a/frontend/src/app/pages/request-page/request-page.component.html
+++ b/frontend/src/app/pages/request-page/request-page.component.html
@@ -1,7 +1,7 @@
 <app-header-employee></app-header-employee>
 <div class="request-container">
   <div class="content">
-    <h2>Request {{ request.id }}</h2>
+    <h2>Request {{ information }}</h2>
     <p>Employee ID: {{ request.employeeId }}</p>
     <p>User ID: {{ request.userId }}</p>
     <p>Risk Group: {{ request.riskGroup }}</p>
