--- a/frontend/src/app/components/header-employee/header-employee.component.html
+++ b/frontend/src/app/components/header-employee/header-employee.component.html
@@ -10,6 +10,9 @@
       <nav>
         <ul>
           <li>
+            <a routerLink="/employee/requests">Your Requests</a>
+          </li>
+          <li>
             <a (click)="logout()" routerLink="/login/">Logout</a>
           </li>
         </ul>
