feat: improvement of information display

--- a/frontend/src/app/components/header-employee/header-employee.component.html
+++ b/frontend/src/app/components/header-employee/header-employee.component.html
@@ -13,7 +13,7 @@
             <a routerLink="/employee/">Home</a>
           </li>
           <li>
-            <a routerLink="/employee/requests">Your Requests</a>
+            <a routerLink="/employee/requests">My Requests</a>
           </li>
           <li>
             <a (click)="logout()" routerLink="/login/">Logout</a>
