--- a/frontend/src/app/pages/request-page/request-page.component.html
+++ b/frontend/src/app/pages/request-page/request-page.component.html
@@ -2,21 +2,49 @@
 <div class="request-container">
   <div class="content">
     <h2>Request {{ information }}</h2>
-    <p>Employee ID: {{ request.employeeId }}</p>
+    <p *ngIf="request.employeeId; else noId">
+      Employee ID: {{ request.employeeId }}
+    </p>
+    <ng-template #noId>Employee ID: None</ng-template>
     <p>User ID: {{ request.userId }}</p>
+
     <p>Risk Group: {{ request.riskGroup }}</p>
     <p>Risk Profession: {{ request.riskProfession }}</p>
     <p>saude24: {{ request.saude24 }}</p>
-    <p>First Test Date: {{ request.firstTestDate }}</p>
+
+    <p *ngIf="request.firstTestDate; else noFirstDate">
+      First Test Date: {{ request.firstTestDate }}
+    </p>
+    <ng-template #noFirstDate>
+      First Test Date: None
+    </ng-template>
     <p>First Test Result: {{ request.firstTestResult }}</p>
-    <p>Second Test Date: {{ request.secondTestDate }}</p>
+    <p *ngIf="request.secondTestDate; else noSecondDate">
+      Second Test Date: {{ request.secondTestDate }}
+    </p>
+    <ng-template #noSecondDate>
+      Second Test Date: None
+    </ng-template>
     <p>Second Test Result: {{ request.secondTestResult }}</p>
     <p>Request State: {{ request.requestState }}</p>
     <p>User State: {{ request.userState }}</p>
 
-    <button routerLink="/employee/request/update">Update</button>
-    <button (click)="claimRequest()" *ngIf="!request.employeeId">
-      Claim Request
-    </button>
+    <div class="button-container">
+      <button
+        mat-raised-button
+        color="primary"
+        routerLink="/employee/request/update"
+      >
+        Update
+      </button>
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="claimRequest()"
+        *ngIf="!request.employeeId"
+      >
+        Claim Request
+      </button>
+    </div>
   </div>
 </div>
