--- a/frontend/src/app/pages/update-request-page/update-request-page.component.css
+++ b/frontend/src/app/pages/update-request-page/update-request-page.component.css
@@ -1,6 +1,24 @@
+.update-request-container {
+  width: 100%;
+  max-width: 1120px;
+  height: 89vh;
+  margin: 0 auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .content {
+  width: 50%;
+  padding: 96px;
+  background: var(--bg);
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 form {
