--- a/frontend/src/app/pages/request-page/request-page.component.html
+++ b/frontend/src/app/pages/request-page/request-page.component.html
@@ -34,7 +34,7 @@
         mat-raised-button
         color="primary"
         routerLink="/employee/request/update"
-        *ngIf="request.employeeId == employee._id"
+        *ngIf="request.employeeId == employee._id && !requestState"
       >
         Update
       </button>
