--- a/frontend/src/app/pages/employee-requests-page/employee-requests-page.component.html
+++ b/frontend/src/app/pages/employee-requests-page/employee-requests-page.component.html
@@ -10,13 +10,13 @@
   <button type="submit">Search</button>
 </form>
 
-<table mat-table [dataSource]="list" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
   <!-- Position Column -->
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>ID</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
     <td
       mat-cell
       *matCellDef="let element"
@@ -29,42 +29,42 @@
 
   <!-- Name Column -->
   <ng-container matColumnDef="requestState">
-    <th mat-header-cell *matHeaderCellDef>Resquest State</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Resquest State</th>
     <td mat-cell *matCellDef="let element">{{ element.requestState }}</td>
   </ng-container>
 
   <ng-container matColumnDef="userState">
-    <th mat-header-cell *matHeaderCellDef>User State</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>User State</th>
     <td mat-cell *matCellDef="let element">{{ element.userState }}</td>
   </ng-container>
 
   <ng-container matColumnDef="userId">
-    <th mat-header-cell *matHeaderCellDef>User ID</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>User ID</th>
     <td mat-cell *matCellDef="let element">{{ element.userId }}</td>
   </ng-container>
 
   <ng-container matColumnDef="firstTestDate">
-    <th mat-header-cell *matHeaderCellDef>First Test Date</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>First Test Date</th>
     <td mat-cell *matCellDef="let element">{{ element.firstTestDate }}</td>
   </ng-container>
 
   <ng-container matColumnDef="firstTestResult">
-    <th mat-header-cell *matHeaderCellDef>First Test Result</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>First Test Result</th>
     <td mat-cell *matCellDef="let element">{{ element.firstTestResult }}</td>
   </ng-container>
 
   <ng-container matColumnDef="secondTestDate">
-    <th mat-header-cell *matHeaderCellDef>Second Test Date</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Second Test Date</th>
     <td mat-cell *matCellDef="let element">{{ element.secondTestDate }}</td>
   </ng-container>
 
   <ng-container matColumnDef="secondTestResult">
-    <th mat-header-cell *matHeaderCellDef>Second Test</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Second Test</th>
     <td mat-cell *matCellDef="let element">{{ element.secondTestResult }}</td>
   </ng-container>
 
   <ng-container matColumnDef="employeeId">
-    <th mat-header-cell *matHeaderCellDef>Responsible</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Responsible</th>
     <td mat-cell *matCellDef="let element">{{ element.employeeId }}</td>
   </ng-container>
 
