--- a/frontend/src/app/pages/employee-requests-page/employee-requests-page.component.html
+++ b/frontend/src/app/pages/employee-requests-page/employee-requests-page.component.html
@@ -17,6 +17,7 @@
       *matCellDef="let element"
       (click)="showRequest(element.id)"
       routerLink="/employee/request"
+      class="requestId"
     >
       {{ element.id }}
     </td>
