feat: added button to go back

--- a/frontend/src/app/pages/request-page/request-page.component.css
+++ b/frontend/src/app/pages/request-page/request-page.component.css
@@ -24,3 +24,14 @@
 button {
   margin-top: 5px;
 }
+
+.button-back {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  width: 100%;
+}
+
+.information {
+  width: 100%;
+}
