--- a/frontend/src/app/components/header-user/header-user.component.html
+++ b/frontend/src/app/components/header-user/header-user.component.html
@@ -1,1 +1,31 @@
-<p>header-user works!</p>
+<header>
+  <div class="container">
+    <img src="../../assets/logo.png" alt="Logo" />
+    <div class="menu-section">
+      <div class="menu-toggle">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <a routerLink="/home/">Home</a>
+          </li>
+          <li>
+            <a routerLink="/question/">Pedir Request</a>
+          </li>
+          <li>
+            <a routerLink="/login/">My Requests</a>
+          </li>
+          <li>
+            <a routerLink="/login/">My Perfil</a>
+          </li>
+          <li>
+            <a routerLink="/register/">Logout</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
