feat: user profile page added

--- a/frontend/src/app/components/header-user/header-user.component.html
+++ b/frontend/src/app/components/header-user/header-user.component.html
@@ -14,7 +14,7 @@
             <a routerLink="">My Requests</a>
           </li>
           <li>
-            <a routerLink="">My Profile</a>
+            <a routerLink="/user/profile">My Profile</a>
           </li>
           <li>
             <a routerLink="/login/" (click)="logout()">Logout</a>
