feat: user requests and request details added

--- a/frontend/src/app/components/header-user/header-user.component.html
+++ b/frontend/src/app/components/header-user/header-user.component.html
@@ -11,7 +11,7 @@
             <a routerLink="">Create Request</a>
           </li>
           <li>
-            <a routerLink="">My Requests</a>
+            <a routerLink="/user/requests">My Requests</a>
           </li>
           <li>
             <a routerLink="/user/profile">My Profile</a>
