--- a/frontend/src/app/pages/employee-requests-page/employee-requests-page.component.html
+++ b/frontend/src/app/pages/employee-requests-page/employee-requests-page.component.html
@@ -1,4 +1,5 @@
-<app-header-employee></app-header-employee>
+<app-header-employee *ngIf="user.role === roleEmployee"></app-header-employee>
+<app-header-user *ngIf="user.role === roleUser"></app-header-user>
 
 <mat-form-field>
   <mat-label>Filter</mat-label>
