feat: create request page added

--- a/frontend/src/app/components/header-user/header-user.component.html
+++ b/frontend/src/app/components/header-user/header-user.component.html
@@ -8,7 +8,7 @@
             <a routerLink="/user/">Home</a>
           </li>
           <li>
-            <a routerLink="">Create Request</a>
+            <a routerLink="/user/createRequest">Create Request</a>
           </li>
           <li>
             <a routerLink="/user/requests">My Requests</a>
