--- a/frontend/src/app/pages/create-request-page/create-request-page.component.css
+++ b/frontend/src/app/pages/create-request-page/create-request-page.component.css
@@ -42,3 +42,17 @@
 .mat-radio-button ~ .mat-radio-button {
   margin-left: 16px;
 }
+
+.successMessage {
+  width: 50%;
+  padding-top: 50px;
+
+  padding-right: 96px;
+  padding-left: 96px;
+  padding-bottom: 96px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
