--- a/frontend/src/app/pages/request-page/request-page.component.html
+++ b/frontend/src/app/pages/request-page/request-page.component.html
@@ -1,4 +1,6 @@
-<app-header-employee></app-header-employee>
+<app-header-employee *ngIf="user.role === roleEmployee"></app-header-employee>
+<app-header-user *ngIf="user.role === roleUser"></app-header-user>
+
 <div class="request-container">
   <div class="content" *ngIf="request">
     <div class="button-back">
