--- a/frontend/src/app/pages/request-page/request-page.component.html
+++ b/frontend/src/app/pages/request-page/request-page.component.html
@@ -1,5 +1,5 @@
-<app-header-employee *ngIf="user.role === roleEmployee"></app-header-employee>
-<app-header-user *ngIf="user.role === roleUser"></app-header-user>
+<app-header-employee *ngIf="userRole === roleEmployee"></app-header-employee>
+<app-header-user *ngIf="userRole === roleUser"></app-header-user>
 
 <div class="request-container">
   <div class="content" *ngIf="request">
