feat: Request page restructure

--- a/frontend/src/app/pages/create-request-page/create-request-page.component.html
+++ b/frontend/src/app/pages/create-request-page/create-request-page.component.html
@@ -34,7 +34,7 @@
         updates.
       </h2>
       <button mat-raised-button color="primary" routerLink="/user/requests">
-        Go Back
+        Confirm
       </button>
     </div>
   </div>
